===========================

Bulletins:
- Bulletins 2016: Possibilité d'imprimer le bulletin de fin de cycle.

Absences 2:
- Possibilité de restreindre le décompte des absences sur les bulletins pour la 
  dernière période en limitant l'extraction du début de la période jusqu'à la 
  date du conseil de classe déclaré en scolarité dans Verrouillage des classes.

LSUN:
- Possibilité de n'extraire qu'une ou certaines périodes.

Genèse des classes:
- Possibilité d'utiliser un autre type de profil mêlant comportement et niveau scolaire.

Général:
- Possibilité de saisir les modalités d'accompagnement en compte scolarité
  (conditionné par un droit à donner dans Gestion générale/Droits d'accès).
- Possibilité de saisir/corriger les numéros de téléphone et mail en compte cpe et scolarité.
  (conditionné pour les CPE par un droit à donner dans Gestion générale/Droits d'accès).

Gepi-1.7.1 (30/03/2017)
===========================

Absences 2:
- Possibilité de donner des droits de consultation/modification de certains 
  paramètres ABS2 à des non-administrateurs (typiquement tel CPE).
- Possibilité de ne pas afficher les saisies correspondant aux Marques d'appel.
- Possibilité de ne pas enregistrer un marqueur d'appel lorsque plusieurs saisies 
  sont faites sur le même créneau/groupe,...
- Bilan individuel: Possibilité de ne pas afficher/exporter les saisies englobées.

Bulletins:
- Ajout d'un témoin sur le cycle et le niveau de chaque élève pour repérer un 
  éventuel problème de Nomenclature/mef.
- Page appréciations groupe classe avec le style CLG2016.
- Modification pour les cycles et niveaux Segpa.
- Ajout d'un droit d'insertion en masse d'appréciations 
  (pour par exemple remplir d'un tiret les appréciations pour un professeur absent).
  Droit donné par défaut aux comptes secours.

Cahier de notes:
- Possibilité d'afficher la colonne Moyenne de l'élève sur les relevés de notes PDF 
  (et non plus seulement sur les relevés HTML).

LSUN: